--- a/frontend/styles/css/vtex.flex-layout.css
+++ b/frontend/styles/css/vtex.flex-layout.css
@@ -96,3 +96,12 @@
 .flexRow--addToCartRow {
   padding-bottom: 1rem;
 }
+
+.flexCol--counter {
+  background-color: #FFC107;
+  padding: 5px;
+  margin: 5px, 0px, 5px, 0px;
+  border: 1px solid #FFC107;
+  border-radius: 5px;
+  font-size: 17px;
+}
